# uae-gov-file-compressor

./: .gitignore  README.md  SPEC.md  index.html  package-lock.json  package.json  vite.config.js  wasm-test.js
.github/workflows/: deploy.yml
rust-wasm/: Cargo.toml
rust-wasm/src/: lib.rs
src/: App.jsx  global.d.ts  styles.css
src/wasm/: package.json  pdf_compressor.d.ts  pdf_compressor.js
