[package]
name = "pdf-compressor"
version = "0.1.0"
edition = "2021"
authors = ["Vladislav"]
description = "Rust WASM PDF compressor with JPEG recompression"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
lopdf = "0.39"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
js-sys = "0.3"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
strip = true